Lab8/ans.txt

PS C:\Users\pavan> mongosh "mongodb+srv://mycluster.mepojo2.mongodb.net/" --apiVersion 1 --username manikantaksn
Enter password: *****
Current Mongosh Log ID: 6538a5334d44bad9bab50aab
Connecting to:          mongodb+srv://<credentials>@mycluster.mepojo2.mongodb.net/?appName=mongosh+2.0.2
Using MongoDB:          6.0.11 (API Version 1)
Using Mongosh:          2.0.2

For mongosh info see: https://docs.mongodb.com/mongodb-shell/


To help improve our products, anonymous usage data is collected and sent to MongoDB periodically (https://www.mongodb.com/legal/privacy-policy).
You can opt-out by running the disableTelemetry() command.

Atlas atlas-2p7lcy-shard-0 [primary] test> db
test
Atlas atlas-2p7lcy-shard-0 [primary] test> db companydb
Uncaught:
SyntaxError: Missing semicolon. (1:2)

> 1 | db companydb
    |   ^
  2 |

Atlas atlas-2p7lcy-shard-0 [primary] test> db companydb;
Uncaught:
SyntaxError: Missing semicolon. (1:2)

> 1 | db companydb;
    |   ^
  2 |

Atlas atlas-2p7lcy-shard-0 [primary] test> db
test
Atlas atlas-2p7lcy-shard-0 [primary] test> use CompanyDB
switched to db CompanyDB
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> use test
switched to db test
Atlas atlas-2p7lcy-shard-0 [primary] test> use CompanyDB
switched to db CompanyDB
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> show dbs
admin  336.00 KiB
local    5.45 GiB
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> show databases
admin  336.00 KiB
local    5.45 GiB
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db
CompanyDB
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.createCollection("customers")
{ ok: 1 }
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> show dbs
CompanyDB    8.00 KiB
admin      336.00 KiB
local        5.45 GiB
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.customers.insertOne({name : "Alice", age : 24})
{
  acknowledged: true,
  insertedId: ObjectId("6538a9814d44bad9bab50aac")
}
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.listCollections()
TypeError: db.listCollections is not a function
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.getCollectionNames()
[ 'customers' ]
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.customers.insertOne({name : "Bob"})
{
  acknowledged: true,
  insertedId: ObjectId("6538aa0f4d44bad9bab50aad")
}
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.customers.insertOne({name : "Charles", age : 26, level : 1})
{
  acknowledged: true,
  insertedId: ObjectId("6538aa234d44bad9bab50aae")
}
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.customers.insertOne({name : "Darshan", age : 27})
{
  acknowledged: true,
  insertedId: ObjectId("6538aa354d44bad9bab50aaf")
}
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> show collections
customers
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.customers.find()
[
  { _id: ObjectId("6538a9814d44bad9bab50aac"), name: 'Alice', age: 24 },
  { _id: ObjectId("6538aa0f4d44bad9bab50aad"), name: 'Bob' },
  {
    _id: ObjectId("6538aa234d44bad9bab50aae"),
    name: 'Charles',
    age: 26,
    level: 1
  },
  {
    _id: ObjectId("6538aa354d44bad9bab50aaf"),
    name: 'Darshan',
    age: 27
  }
]
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.customers.find(age:24)
Uncaught:
SyntaxError: Unexpected token, expected "," (1:21)

> 1 | db.customers.find(age:24)
    |                      ^
  2 |

Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.customers.find({age:24})
[
  { _id: ObjectId("6538a9814d44bad9bab50aac"), name: 'Alice', age: 24 }
]
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.customers.find({age:27})
[
  {
    _id: ObjectId("6538aa354d44bad9bab50aaf"),
    name: 'Darshan',
    age: 27
  }
]
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.customers.find({age>=27})
Uncaught:
SyntaxError: Unexpected token, expected "," (1:22)

> 1 | db.customers.find({age>=27})
    |                       ^
  2 |

Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.customers.find({age:{$gte:27}})
[
  {
    _id: ObjectId("6538aa354d44bad9bab50aaf"),
    name: 'Darshan',
    age: 27
  }
]
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.customers.find({age:{$lt:27}})
[
  { _id: ObjectId("6538a9814d44bad9bab50aac"), name: 'Alice', age: 24 },
  {
    _id: ObjectId("6538aa234d44bad9bab50aae"),
    name: 'Charles',
    age: 26,
    level: 1
  }
]
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.customers.getIndexes()
[ { v: 2, key: { _id: 1 }, name: '_id_' } ]
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.customers.find({age:{$lt:27}},{name})
ReferenceError: name is not defined
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.customers.find({name},{age:{$lt:27}})
ReferenceError: name is not defined
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.customers.find({name:},{age:{$lt:27}})
Uncaught:
SyntaxError: Unexpected token (1:24)

> 1 | db.customers.find({name:},{age:{$lt:27}})
    |                         ^
  2 |

Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.customers.find({},{age:{$lt:27}})
MongoServerError: Expression $lt takes exactly 2 arguments. 1 were passed in.
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.customers.find({age:{$lt:27}})
[
  { _id: ObjectId("6538a9814d44bad9bab50aac"), name: 'Alice', age: 24 },
  {
    _id: ObjectId("6538aa234d44bad9bab50aae"),
    name: 'Charles',
    age: 26,
    level: 1
  }
]
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.customers.find({},{name:1}{age:{$lt:27}})
Uncaught:
SyntaxError: Unexpected token, expected "," (1:29)

> 1 | db.customers.find({},{name:1}{age:{$lt:27}})
    |                              ^
  2 |

Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.customers.find({},{name:1},{age:{$lt:27}})
[
  { _id: ObjectId("6538a9814d44bad9bab50aac"), name: 'Alice' },
  { _id: ObjectId("6538aa0f4d44bad9bab50aad"), name: 'Bob' },
  { _id: ObjectId("6538aa234d44bad9bab50aae"), name: 'Charles' },
  { _id: ObjectId("6538aa354d44bad9bab50aaf"), name: 'Darshan' }
]
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.customers.find({},{name:1,_id:0},{age:{$lt:27}})
[
  { name: 'Alice' },
  { name: 'Bob' },
  { name: 'Charles' },
  { name: 'Darshan' }
]
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.customers.find({},{name:1,_id:0, age:1},{age:{$lt:27}})
[
  { name: 'Alice', age: 24 },
  { name: 'Bob' },
  { name: 'Charles', age: 26 },
  { name: 'Darshan', age: 27 }
]
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> show dbs
CompanyDB   72.00 KiB
admin      336.00 KiB
local        5.45 GiB
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> show collections
customers
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.customers.find({name:1,_id:0, age:1},{age:{$lt:27}})
MongoServerError: Expression $lt takes exactly 2 arguments. 1 were passed in.
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.customers.find({},{name:1,_id:0, age:1},{age:{$lt:27}})
[
  { name: 'Alice', age: 24 },
  { name: 'Bob' },
  { name: 'Charles', age: 26 },
  { name: 'Darshan', age: 27 }
]
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.customers.find({},{_id:0, age:1},{age:{$lt:27}})
[ { age: 24 }, {}, { age: 26 }, { age: 27 } ]
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.customers.find({},{_id:1, age:1},{age:{$lt:27}})
[
  { _id: ObjectId("6538a9814d44bad9bab50aac"), age: 24 },
  { _id: ObjectId("6538aa0f4d44bad9bab50aad") },
  { _id: ObjectId("6538aa234d44bad9bab50aae"), age: 26 },
  { _id: ObjectId("6538aa354d44bad9bab50aaf"), age: 27 }
]
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.customers.find({},{age:1},{age:{$lt:27}})
[
  { _id: ObjectId("6538a9814d44bad9bab50aac"), age: 24 },
  { _id: ObjectId("6538aa0f4d44bad9bab50aad") },
  { _id: ObjectId("6538aa234d44bad9bab50aae"), age: 26 },
  { _id: ObjectId("6538aa354d44bad9bab50aaf"), age: 27 }
]
Atlas atlas-2p7lcy-shard-0 [primary] CompanyDB> db.customers.find({},{},{age:{$lt:27}})
[
  { _id: ObjectId("6538a9814d44bad9bab50aac"), name: 'Alice', age: 24 },
  { _id: ObjectId("6538aa0f4d44bad9bab50aad"), name: 'Bob' },
  {
    _id: ObjectId("6538aa234d44bad9bab50aae"),
    name: 'Charles',
    age: 26,
    level: 1
  },
  {
    _id: ObjectId("6538aa354d44bad9bab50aaf"),
    name: 'Darshan',
    age: 27
  }
]